--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -71,16 +71,20 @@
         android:hint="Password"
         android:background="@drawable/edit_text_custom"
         android:layout_below="@id/pwn"
+        android:textColor="@color/black"
         android:layout_marginTop="-25dp"
         android:layout_marginLeft="76dp"/>
 
     <ImageView
         android:id="@+id/frgtpw"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:src="@drawable/forgottype"
-        android:layout_marginTop="320dp"
-        android:layout_marginLeft="280dp"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/pwn"
+        android:layout_alignParentEnd="true"
+        android:layout_marginLeft="280dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="44dp"
+        android:src="@drawable/forgottype" />
 
     <ImageView
         android:id="@+id/lgnbtn"
