--- a/app/src/main/res/layout/layout_cart_item.xml
+++ b/app/src/main/res/layout/layout_cart_item.xml
@@ -6,7 +6,8 @@
     android:padding="8dp"
     android:layout_margin="8dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -92,16 +93,6 @@
                 android:fontFamily="@font/poppins_light"
                 android:layout_alignParentRight="true"
                 android:textSize="15sp"/>
-
-            <ImageView
-                android:id="@+id/btntryon"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/tyron2"
-                android:layout_marginTop="100dp"
-                android:layout_marginLeft="156dp"/>
-
-
 
 
         </RelativeLayout>
